// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exercise Preview Component renders for MPQs 1`] = `
<div
  className="openstax-exercise-badges"
>
  <span
    className="mpq"
  >
    <svg
      className="icon multipart"
      height="17.5px"
      viewBox="0 0 17.57 17.61"
      width="17.5px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          data-name="Layer 1"
          id="Layer_1-2"
        >
          <path
            d="M9.43,17.61a8.88,8.88,0,0,0,8.14-7.67.46.46,0,0,0-.46-.52H9.88a.46.46,0,0,0-.46.46Z"
            style={
              Object {
                "fill": "#222e65",
              }
            }
          />
          <path
            d="M7.62,0A8.8,8.8,0,0,0,0,7.62a.46.46,0,0,0,.46.52H7.68a.46.46,0,0,0,.46-.46V.46A.46.46,0,0,0,7.62,0Z"
            style={
              Object {
                "fill": "#222e65",
              }
            }
          />
          <path
            d="M0,9.95a8.88,8.88,0,0,0,7.61,7.61.46.46,0,0,0,.52-.46V9.88a.46.46,0,0,0-.46-.46H.46A.46.46,0,0,0,0,9.95Z"
            style={
              Object {
                "fill": "#222e65",
              }
            }
          />
          <path
            d="M9.88,8.14H17.1a.46.46,0,0,0,.46-.52A8.8,8.8,0,0,0,9.95,0a.46.46,0,0,0-.52.46V7.68A.46.46,0,0,0,9.88,8.14Z"
            style={
              Object {
                "fill": "#15c0dc",
              }
            }
          />
        </g>
      </g>
    </svg>
    <span>
      Multi-part question
    </span>
  </span>
</div>
`;

exports[`Exercise Preview Component renders for personalized 1`] = `null`;

exports[`Exercise Preview Component renders for video 1`] = `
<div
  className="openstax-exercise-badges"
>
  <span
    className="video"
  >
    <svg
      className="icon interactive"
      version="1.1"
      viewBox="0 0 53.23 53.21"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          data-name="Layer 1"
          id="Layer_1-2"
        >
          <path
            d="M48.86,0H11.37A4.34,4.34,0,0,0,7,4.35V41.6A4.34,4.34,0,0,0,11.37,46H48.86a4.34,4.34,0,0,0,4.35-4.35V4.35A4.19,4.19,0,0,0,48.86,0Zm1,40.88a1.65,1.65,0,0,1-1.69,1.69H11.85a1.65,1.65,0,0,1-1.69-1.69V5.32a1.65,1.65,0,0,1,1.69-1.69H48.14a1.65,1.65,0,0,1,1.69,1.69Z"
            style={
              Object {
                "fill": "#222e65",
              }
            }
          />
          <path
            d="M48.14,3.63H11.85a1.65,1.65,0,0,0-1.69,1.69V40.88a1.65,1.65,0,0,0,1.69,1.69H48.14a1.65,1.65,0,0,0,1.69-1.69V5.32A1.65,1.65,0,0,0,48.14,3.63ZM23.46,35.32V10.88L41.12,23.22Z"
            style={
              Object {
                "fill": "none",
              }
            }
          />
          <path
            d="M3.39,47.65V18.78a1.61,1.61,0,0,0-1.61-1.61H1.61A1.61,1.61,0,0,0,0,18.78V48.86a4.35,4.35,0,0,0,4.35,4.35H33.47a1.61,1.61,0,0,0,1.61-1.61v-.41a1.61,1.61,0,0,0-1.61-1.61H5.32A1.94,1.94,0,0,1,3.39,47.65Z"
            style={
              Object {
                "fill": "#222e65",
              }
            }
          />
          <path
            d="M26,33.59,39.2,24.53a1.61,1.61,0,0,0,0-2.64L26,12.65A1.61,1.61,0,0,0,23.46,14v18.3A1.61,1.61,0,0,0,26,33.59Z"
            style={
              Object {
                "fill": "#15c0dc",
              }
            }
          />
        </g>
      </g>
    </svg>
    <span>
      Video
    </span>
  </span>
</div>
`;

exports[`Exercise Preview Component renders interactive 1`] = `
<div
  className="openstax-exercise-badges"
>
  <span
    className="interactive"
  >
    <svg
      className="icon interactive"
      version="1.1"
      viewBox="0 0 53.23 53.21"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        data-name="Layer 2"
        id="Layer_2"
      >
        <g
          data-name="Layer 1"
          id="Layer_1-2"
        >
          <path
            d="M48.86,0H11.37A4.34,4.34,0,0,0,7,4.35V41.6A4.34,4.34,0,0,0,11.37,46H48.86a4.34,4.34,0,0,0,4.35-4.35V4.35A4.19,4.19,0,0,0,48.86,0Zm1,40.88a1.65,1.65,0,0,1-1.69,1.69H11.85a1.65,1.65,0,0,1-1.69-1.69V5.32a1.65,1.65,0,0,1,1.69-1.69H48.14a1.65,1.65,0,0,1,1.69,1.69Z"
            style={
              Object {
                "fill": "#222e65",
              }
            }
          />
          <path
            d="M48.14,3.63H11.85a1.65,1.65,0,0,0-1.69,1.69V40.88a1.65,1.65,0,0,0,1.69,1.69H48.14a1.65,1.65,0,0,0,1.69-1.69V5.32A1.65,1.65,0,0,0,48.14,3.63ZM23.46,35.32V10.88L41.12,23.22Z"
            style={
              Object {
                "fill": "none",
              }
            }
          />
          <path
            d="M3.39,47.65V18.78a1.61,1.61,0,0,0-1.61-1.61H1.61A1.61,1.61,0,0,0,0,18.78V48.86a4.35,4.35,0,0,0,4.35,4.35H33.47a1.61,1.61,0,0,0,1.61-1.61v-.41a1.61,1.61,0,0,0-1.61-1.61H5.32A1.94,1.94,0,0,1,3.39,47.65Z"
            style={
              Object {
                "fill": "#222e65",
              }
            }
          />
          <path
            d="M26,33.59,39.2,24.53a1.61,1.61,0,0,0,0-2.64L26,12.65A1.61,1.61,0,0,0,23.46,14v18.3A1.61,1.61,0,0,0,26,33.59Z"
            style={
              Object {
                "fill": "#15c0dc",
              }
            }
          />
        </g>
      </g>
    </svg>
    <span>
      Interactive
    </span>
  </span>
</div>
`;
